# lambda-autoclicker

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.github/workflows/: build.yml  deploy.yml
src/: app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Radio.svelte  Tabs.svelte  clicking.svelte.ts  lambda.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(site)/: +page.ts
src/routes/(site)/site/: +page.svelte
src/routes/app/(app)/: +layout.svelte  +page.svelte  +page.ts
src/routes/app/picker/: +page.svelte
src/routes/picker/: +page.svelte
